[package]
name = "ipinfo_io"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4.39"
dotenv = "0.15.0"
base64 = "0.22.1"
sha2 = "0.10.0"
sha1 = "0.10.0"
md5 = "0.7.0"
hex = "0.4.3"